fix bom