@@ -40,17 +40,6 @@
                     <target>17</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M5</version>
-                <configuration>
-                    <argLine>--illegal-access=permit</argLine>
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
-                    <argLine>--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED</argLine>
-                    <argLine>-Dillegal-access=permit</argLine>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
@@ -62,6 +51,7 @@
                 <artifactId>jackson-bom</artifactId>
                 <version>2.13.3</version>
                 <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
